Fixed loading and tech icons not showing correctly

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -248,6 +248,7 @@ article .footer a {
 #spinning {
 	width: 50px;
 	height: 50px;
+	border: 3px solid transparent;
 	border-top: 3px solid #444;
 	border-radius: 50%;
 	animation: rotate 1.5s infinite linear;
